@@ -1,4 +1,7 @@
 2018-02-03 (0.12.13)
+	COMMON: UNITPATH replaced with SBASICPATH which also works for modules
+
+2018-02-03 (0.12.13)
 	COMMON: modules refresh
 
 2018-02-03 (0.12.12)
